--- a/davidobo.css
+++ b/davidobo.css
@@ -1,7 +1,7 @@
 
         :root {
-            --color-primary: rgb(36, 113, 105);
-            --color-secondary: #247169
+            --color-primary: rgb(254, 102, 1);
+            --color-secondary: #d57328
         }
 
         * {
