--- a/davidobo.css
+++ b/davidobo.css
@@ -122,7 +122,7 @@
         .chat__conversation-box-active {
             width: 1rem;
             height: 1rem;
-            background-color: #21806a;
+            background-color: #FE6601;
             border-radius: 50%;
             position: absolute;
             top: 2.5rem;
@@ -131,7 +131,7 @@
 
         .chat__conversation-box-content-comment {
             padding: 1rem;
-            background-color: #D5D5D2;
+            background-color: #F9AC74;
             border-top-left-radius: 14px;
             border-top-right-radius: 14px;
             border-bottom-left-radius: 14px;
