--- a/davidobo.css
+++ b/davidobo.css
@@ -131,7 +131,7 @@
 
         .chat__conversation-box-content-comment {
             padding: 1rem;
-            background-color: #F9AC74;
+            background-color: #000000;
             border-top-left-radius: 14px;
             border-top-right-radius: 14px;
             border-bottom-left-radius: 14px;
