--- a/davidobo.css
+++ b/davidobo.css
@@ -147,7 +147,7 @@
         .chat__conversation-box-content-cta {
             margin-top: .3rem;
             padding-left: 1.5rem;
-            color: #726695
+            color: #F3F3F2
         }
 
         .chat__conversation-box-content-cta-text {
