--- a/davidobo.css
+++ b/davidobo.css
@@ -1,7 +1,7 @@
 
         :root {
-            --color-primary: rgb(254, 102, 1);
-            --color-secondary: #d57328
+            --color-primary: rgb(213, 115, 40);
+            --color-secondary: #235E00
         }
 
         * {
