--- a/davidobo.css
+++ b/davidobo.css
@@ -1,7 +1,7 @@
 
         :root {
-            --color-primary: rgb(1, 38, 93);
-            --color-secondary: #01265D
+            --color-primary: rgb(1, 93, 56);
+            --color-secondary: #015D38
         }
 
         * {
