--- a/davidobo.css
+++ b/davidobo.css
@@ -371,10 +371,10 @@
             width: 80%;
             font-size: 2rem;
             font-weight: 700;
-            color: #000;
+            color: #fff;
             padding: 1rem;
             border: none;
-            background-color: #FECA05;
+            background-color: #015D38;
             border-top-left-radius: 14px;
             border-top-right-radius: 14px;
             border-bottom-left-radius: 14px;
