--- a/davidobo.css
+++ b/davidobo.css
@@ -1,7 +1,7 @@
-
+  <style>
         :root {
-            --color-primary: rgb(1, 93, 56);
-            --color-secondary: #015D38
+            --color-primary: rgb(36, 113, 105);
+            --color-secondary: #247169
         }
 
         * {
@@ -139,7 +139,7 @@
         }
 
         .chat__conversation-box-content-comment-name {
-            color: #BE1902;
+            color: #000000;
             font-weight: 500;
             margin-right: .4rem
         }
@@ -371,10 +371,10 @@
             width: 80%;
             font-size: 2rem;
             font-weight: 700;
-            color: #fff;
+            color: #000;
             padding: 1rem;
             border: none;
-            background-color: #015D38;
+            background-color: #2bd9b3;
             border-top-left-radius: 14px;
             border-top-right-radius: 14px;
             border-bottom-left-radius: 14px;
@@ -608,4 +608,4 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
- 
+    </style>
